# FTcalculator

./: README.md  convert_icon.py  main.py  pyproject.toml
.github/workflows/: main.yml
src/: dataprotection.py  main.py
src/localisations/: __init__.py  localisation.csv  translations.py
